--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     </div>
 
-    <button id="webcamButton" class="button">Start webcam</button>
+    <button id="webcamButton" class="buttonstart">Start webcam</button>
     <h2> Create a new Call</h2>
     <button id="callButton" disabled class="button">Create Call (offer)</button>
 
